change file system

--- a/demo/src/app/app.component.html
+++ b/demo/src/app/app.component.html
@@ -24,11 +24,8 @@
         </div>
       </mat-card-header>
 
-      <mat-card-content class="demo-card-content">
-        <form >
-        <cron-editor  #cronEditorDemo [formControl]="cronForm"  [options]="cronOptions">Cron here...</cron-editor>
-        </form>
-      </mat-card-content>
+      <!-- TODO my cron editor here after the publishing on npm -->
+      <cron-editor  #cronEditorDemo [formControl]="cronForm"  [options]="cronOptions">Cron here...</cron-editor>
 
       <mat-card-footer class="demo-card-footer">
         <div>
