--- a/demo/src/app/app.component.html
+++ b/demo/src/app/app.component.html
@@ -37,8 +37,7 @@
       <app-cron-editor
         [options]="cronOptions"
         [cronStartingValue]="cronValue"
-        (cronChange)="seeCron($event)"
-        [initialLanguage]="languageFC.value">
+        (cronChange)="seeCron($event)">
       </app-cron-editor>
 
       <mat-card-footer class="demo-card-footer">
