removed flex-layout. Compatibility with angular 15

--- a/libs/cron-editor/src/lib/cron-editor.component.css
+++ b/libs/cron-editor/src/lib/cron-editor.component.css
@@ -12,3 +12,10 @@
 .check-weekday {
   margin-left: 12px;
 }
+
+.column-stretch-start {
+  display: flex;
+  flex-flow: column;
+  justify-content: start;
+  align-items: stretch;
+}
